--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -18,6 +18,7 @@ body {
 .mbr-text {
   font-style: normal;
   line-height: 1.6;
+  text-align: justify;
 }
 .display-1 {
   font-family: 'Rubik', sans-serif;
@@ -1390,7 +1391,7 @@ body {
   font-style: italic;
   color: #676767;
   font-weight: 300;
-  text-align: left;
+  text-align: justify;
 }
 .cid-rdM5OZecPG .mbr-author-name {
   font-weight: bold;
