Hyperlinks, formatting, and minor edits

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1394,6 +1394,7 @@ body {
   text-align: justify;
 }
 .cid-rdM5OZecPG .mbr-author-name {
+  font-size: 150%;
   font-weight: bold;
   color: #232;
 }
